Fixed dark mode drop-downs

--- a/src/css/components/select.css
+++ b/src/css/components/select.css
@@ -47,3 +47,7 @@ select:focus {
         0 0 0 4px rgba(10, 132, 255, 0.3);
     outline: none;
 }
+
+option {
+    background-color: var(--option-background);
+}
